set text in th in info table bold

--- a/app/src/main/res/layout/fragment_info.xml
+++ b/app/src/main/res/layout/fragment_info.xml
@@ -14,11 +14,12 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:padding="5dp">
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Address">
-        </TextView>
+            android:text="Address"
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/info_address"
@@ -32,12 +33,14 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:padding="5dp">
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginRight="16dp"
             android:text="Phone Number"
-            android:layout_marginRight="16dp">
-        </TextView>
+            android:textStyle="bold"
+            android:layout_marginEnd="16dp" />
 
         <TextView
             android:id="@+id/info_phone_number"
@@ -52,11 +55,12 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:padding="5dp">
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Price Level">
-        </TextView>
+            android:text="Price Level"
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/info_price_level"
@@ -75,7 +79,8 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Rating" />
+            android:text="Rating"
+            android:textStyle="bold" />
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
@@ -97,15 +102,16 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:padding="5dp">
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Google Page">
-        </TextView>
+            android:text="Google Page"
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/info_google_page"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="No Google Page"
             android:autoLink="web">
@@ -116,15 +122,16 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:padding="5dp">
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Website">
-        </TextView>
+            android:text="Website"
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/info_website"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="No website"
             android:autoLink="web">
