--- a/app/src/main/res/layout/review_item.xml
+++ b/app/src/main/res/layout/review_item.xml
@@ -17,7 +17,7 @@
 
         <ImageView
             android:id="@+id/review_author_image"
-            android:layout_width="wrap_content"
+            android:layout_width="60dp"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             app:srcCompat="@android:drawable/alert_dark_frame" />
