--- a/app/src/main/res/layout/favorites_tab.xml
+++ b/app/src/main/res/layout/favorites_tab.xml
@@ -8,11 +8,8 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin">
 
-    <TextView
-        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:text="Favorites Tab" />
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/favorites_recyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 </LinearLayout>
