--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -36,13 +36,15 @@
                 android:id="@+id/tabItem"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/main_tab_text_1" />
+                android:text="@string/main_tab_text_1"
+                android:icon="@drawable/search"/>
 
             <android.support.design.widget.TabItem
                 android:id="@+id/tabItem2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/main_tab_text_2" />
+                android:text="@string/main_tab_text_2"
+                android:icon="@drawable/heart_fill_white"/>
 
         </android.support.design.widget.TabLayout>
     </android.support.design.widget.AppBarLayout>
