completed form validation and no results display TODO: when the user unfavorites all items in favo tab, "No favorites" should be displayed

--- a/app/src/main/res/layout/activity_search_results.xml
+++ b/app/src/main/res/layout/activity_search_results.xml
@@ -24,6 +24,14 @@
         android:layout_below="@+id/toolbarResults"
         android:layout_above="@+id/paginationButtons"/>
 
+    <TextView
+        android:id="@+id/no_result"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:text="No results"
+        android:visibility="gone"/>
+
     <LinearLayout
         android:id="@+id/paginationButtons"
         android:layout_width="match_parent"
