--- a/app/src/main/res/layout/fragment_photos.xml
+++ b/app/src/main/res/layout/fragment_photos.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -14,4 +14,12 @@
         android:id="@+id/photos_recyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
-</LinearLayout>
+
+    <TextView
+        android:id="@+id/no_photos"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="No photos"
+        android:layout_centerInParent="true"
+        android:visibility="gone"/>
+</RelativeLayout>
