--- a/app/src/main/res/layout/fragment_info.xml
+++ b/app/src/main/res/layout/fragment_info.xml
@@ -12,7 +12,8 @@
 
     <TableRow
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/info_row_margin_bottom"
         android:padding="5dp">
 
         <TextView
@@ -25,35 +26,35 @@
             android:id="@+id/info_address"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Place Address">
-        </TextView>
+            android:text="Place Address"></TextView>
     </TableRow>
 
     <TableRow
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/info_row_margin_bottom"
         android:padding="5dp">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="16dp"
             android:layout_marginRight="16dp"
             android:text="Phone Number"
-            android:textStyle="bold"
-            android:layout_marginEnd="16dp" />
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/info_phone_number"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="No phone number"
-            android:autoLink="phone">
-        </TextView>
+            android:autoLink="phone"
+            android:text="No phone number"></TextView>
     </TableRow>
 
     <TableRow
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginBottom="@dimen/info_row_margin_bottom"
         android:padding="5dp">
 
         <TextView
@@ -66,14 +67,14 @@
             android:id="@+id/info_price_level"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="No price level">
-        </TextView>
+            android:text="No price level"></TextView>
     </TableRow>
 
     <TableRow
         android:id="@+id/row_rating"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginBottom="@dimen/info_row_margin_bottom"
         android:padding="5dp">
 
         <TextView
@@ -81,9 +82,11 @@
             android:layout_height="wrap_content"
             android:text="Rating"
             android:textStyle="bold" />
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
+
             <RatingBar
                 android:id="@+id/ratingBar"
                 style="@style/Base.Widget.AppCompat.RatingBar.Small"
@@ -95,27 +98,27 @@
         </LinearLayout>
 
 
-
     </TableRow>
 
     <TableRow
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/info_row_margin_bottom"
         android:padding="5dp">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Google Page"
-            android:textStyle="bold" />
+            android:textStyle="bold"/>
 
         <TextView
             android:id="@+id/info_google_page"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="No Google Page"
-            android:autoLink="web">
-        </TextView>
+            android:autoLink="web"
+            android:layout_weight="2"
+            android:text="No google page"></TextView>
     </TableRow>
 
     <TableRow
@@ -134,6 +137,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="No website"
+            android:layout_weight="2"
             android:autoLink="web">
         </TextView>
     </TableRow>
