--- a/app/src/main/res/layout/review_item.xml
+++ b/app/src/main/res/layout/review_item.xml
@@ -13,7 +13,7 @@
     <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_marginRight="20dp">
+        android:layout_marginRight="15dp">
 
         <ImageView
             android:id="@+id/review_author_image"
@@ -32,7 +32,8 @@
             android:id="@+id/review_author_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Author name" />
+            android:text="Author name"
+            android:textColor="#4aa78e"/>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -40,9 +41,9 @@
 
             <RatingBar
                 android:id="@+id/review_ratingbar"
-                style="@style/Base.Widget.AppCompat.RatingBar.Small"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                style="@style/Base.Widget.AppCompat.RatingBar.Small"
                 android:numStars="5"
                 android:rating="3.5" />
 
