--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -36,25 +36,29 @@
                 android:id="@+id/tabItem"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="INFO" />
+                android:text="INFO"
+                android:icon="@drawable/info_outline"/>
 
             <android.support.design.widget.TabItem
                 android:id="@+id/tabItem2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="PHOTOS" />
+                android:text="PHOTOS"
+                android:icon="@drawable/photos"/>
 
             <android.support.design.widget.TabItem
                 android:id="@+id/tabItem3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="MAP" />
+                android:text="MAP"
+                android:icon="@drawable/maps"/>
 
             <android.support.design.widget.TabItem
                 android:id="@+id/tabItem4"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="REVIEWS" />
+                android:text="REVIEWS"
+                android:icon="@drawable/review"/>
 
         </android.support.design.widget.TabLayout>
     </android.support.design.widget.AppBarLayout>
